--- a/client/src/styles/RatingsReviews/Sorting.css
+++ b/client/src/styles/RatingsReviews/Sorting.css
@@ -5,10 +5,6 @@
   font-size: medium;
 }
 
-.sortText {
-  margin-left: .5%;
-}
-
 .sortMethod {
   font-family: "Tahoma", sans-serif;
   font-weight: 800;
